@@ -71,7 +71,7 @@ services:
       CLUSTER_PORT: "8090"
       MANAGEMENT_PORT: "8080"
       PEERS: "node-1:aether-node-1:8090,node-2:aether-node-2:8090,node-3:aether-node-3:8090"
-      JAVA_OPTS: "-Xmx256m -XX:+UseZGC -XX:+ZGenerational"
+      JAVA_OPTS: "-Xmx256m -XX:+UseZGC -XX:+ZGenerational -XX:+UseCompactObjectHeaders"
     ports:
       - "8080:8080"
       - "8090:8090"
